--- a/index.html
+++ b/index.html
@@ -7,8 +7,12 @@
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <div class="centered-content">
+    <div class="container">
         <h1>🚧 Under Construction 🚧</h1>
+        <p>We are currently working on our website <strong>ahmadaamer.com</strong>.</p>
+        <p>Please check back soon for updates!</p>
+        <hr>
+        <p class="footer">Thank you for your patience!</p>
     </div>
 </body>
 </html>
